--- a/static/global.css
+++ b/static/global.css
@@ -1,11 +1,32 @@
+html, body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  overflow: hidden;
+}
 html {
-  font-family: 'Trebuchet MS', sans-serif;
+  font-size: 62.5%;
+  font-family: 'Fira Sans Condensed', 'Trebuchet MS', sans-serif; 
+}
+body {
+  font-size: 1.4rem;
+  line-height: 2rem;
+  -webkit-font-smoothing: antialiased;
+  color: hsl(var(--gray));
   background: linear-gradient(to bottom right, rgba(224,240,246), rgba(117,133,181));
 }
-
-html, body {
-  width: 100%;
-  height: 100%;
-  padding: 0;
-  margin: 0;
+* {
+  box-sizing: border-box;
+}
+button, input {
+  font-family: 'Fira Sans Condensed', 'Trebuchet MS', sans-serif;
+}
+h1, h2, h3, h4, h5, h6 {
+  line-height: 40px;
+}
+a {
+  color: hsl(var(--blue))
+}
+a:hover {
+  text-decoration: none;
 }
