--- a/static/global.css
+++ b/static/global.css
@@ -6,7 +6,7 @@ html, body {
 }
 html {
   font-size: 62.5%;
-  font-family: 'Fira Sans Condensed', 'Trebuchet MS', sans-serif; 
+  font-family: 'Fira Sans Condensed', 'Trebuchet MS', sans-serif;
 }
 body {
   font-size: 1.4rem;
@@ -22,7 +22,7 @@ button, input {
   font-family: 'Fira Sans Condensed', 'Trebuchet MS', sans-serif;
 }
 h1, h2, h3, h4, h5, h6 {
-  line-height: 40px;
+  margin: 0;
 }
 a {
   color: hsl(var(--blue))
