--- a/static/icomoon/style.css
+++ b/static/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?3dg0bm');
-  src:  url('fonts/icomoon.eot?3dg0bm#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?3dg0bm') format('truetype'),
-    url('fonts/icomoon.woff?3dg0bm') format('woff'),
-    url('fonts/icomoon.svg?3dg0bm#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?lhj9c');
+  src:  url('fonts/icomoon.eot?lhj9c#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?lhj9c') format('truetype'),
+    url('fonts/icomoon.woff?lhj9c') format('woff'),
+    url('fonts/icomoon.svg?lhj9c#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -25,6 +25,9 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.icon-cross:before {
+  content: "\e911";
+}
 .icon-check:before {
   content: "\e910";
 }
