--- a/static/global.css
+++ b/static/global.css
@@ -1,8 +1,15 @@
-html, body {
+:root {
+  --orange: 27, 87%, 70%;
+  --red: 0, 100%, 45%;
+  --green: 116, 81%, 45%;
+  --blue: 216, 74%, 43%;
+  --gray: 216, 0%, 35%;
+  --form-bg-color: 0, 0%, 100%;
+}
+html,
+body {
   margin: 0;
-  padding: 0;
   height: 100%;
-  overflow: hidden;
 }
 html {
   font-size: 62.5%;
@@ -13,19 +20,27 @@ body {
   line-height: 2rem;
   -webkit-font-smoothing: antialiased;
   color: hsl(var(--gray));
-  background: linear-gradient(to bottom right, rgba(224,240,246), rgba(117,133,181));
+  background: linear-gradient(to bottom right, rgba(224, 240, 246), rgba(117, 133, 181));
 }
-* {
+*,
+:before,
+:after {
   box-sizing: border-box;
 }
-button, input {
+button,
+input {
   font-family: 'Fira Sans Condensed', 'Trebuchet MS', sans-serif;
 }
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin: 0 0 12px 0;
 }
 a {
-  color: hsl(var(--blue))
+  color: hsl(var(--blue));
 }
 a:hover {
   text-decoration: none;
@@ -33,4 +48,11 @@ a:hover {
 .tooltip {
   opacity: 0;
   pointer-events: none;
+}
+
+.strip-defaults {
+  /* Button */
+  background: none;
+  border: 0;
+  outline: 0;
 }
